<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24"
        android:title="@string/hapus"
        app:showAsAction="always" />
</menu>