<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="?dialogPreferredPadding"
    android:paddingEnd="?dialogPreferredPadding">
    <EditText
        android:id="@+id/nimEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nim"
        android:maxLength="10" />
    <EditText
        android:id="@+id/namaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama" />
</LinearLayout>